<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in.</string>
    <string name="email"><font fgcolor='#FFFFFF'>   Email</font></string>
    <string name="password"><font fgcolor='#FFFFFF'>   Password</font></string>
    <string name="loginbtn">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="welcome">Welcome, </string>
    <string name="shows">Shows</string>
    <string name="show_shows">Show Shows</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing. Get it?</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="write_a_review">Write a Review</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="reviews_average">%s REVIEWS, %s AVERAGE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="register">Register</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="confirm_logout_message">Are you sure you want to logout?</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="problems_try_again">There are some problems, please try again</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="short_password">Password must be at least 6 characters long</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="loading">Loading...</string>
    <string name="showsLogo">Shows</string>
</resources>