<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <ImageView
        android:id="@+id/topleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_left_illustration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/topright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_right_illustration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/logohorisontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_horizontal_white"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="181dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="56dp"
        />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="373dp"
        android:layout_marginStart="24sp"
        android:text="@string/login"
        android:textSize="34sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        />

    <TextView
        android:id="@+id/pleaselogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logintext"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/in_order_to_continue_please_log_in"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        />

    <EditText
        android:id="@+id/emailtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pleaselogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="25dp"
        android:paddingEnd="40dp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/custom_text"
        />

    <TextView
        android:id="@+id/emailerror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailtext"
        app:layout_constraintStart_toStartOf="@id/emailtext"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:textColor="#c73e1d"

        />

    <TextView
        android:id="@+id/emaillabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/emailtext"
        app:layout_constraintStart_toStartOf="@id/emailtext"
        android:layout_marginTop="-10dp"
        android:layout_marginStart="16dp"
        android:background="@color/purple_500"
        android:text="@string/Email"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:visibility="invisible"
        />

    <EditText
        android:id="@+id/passwordtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailtext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:paddingEnd="40dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/custom_text"

        />

    <TextView
        android:id="@+id/passworderror"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordtext"
        app:layout_constraintStart_toStartOf="@id/passwordtext"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:textColor="#c73e1d"

        />

    <TextView
        android:id="@+id/passwordlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/passwordtext"
        app:layout_constraintStart_toStartOf="@id/passwordtext"
        android:layout_marginTop="-10dp"
        android:layout_marginStart="16dp"
        android:background="@color/purple_500"
        android:text="@string/Password"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/login_button_not_clickable"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/purple_500"
        android:text="@string/loginbtn"
        android:textAllCaps="false"
        android:enabled="false"
        android:clickable="false"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/visiblebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/passwordtext"
        app:layout_constraintEnd_toEndOf="@id/passwordtext"
        app:layout_constraintBottom_toBottomOf="@id/passwordtext"
        android:background="@drawable/invisible"
        android:layout_marginTop="13dp"
        android:layout_marginStart="306dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        />












</androidx.constraintlayout.widget.ConstraintLayout>