<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityShowDetails">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="44dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_back_button"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:id="@+id/maintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/backbutton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        tools:text="Prison break"
        android:fontFamily="@font/roboto_bold"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:textFontWeight="700"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/showimg"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintTop_toBottomOf="@id/maintitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/prison_break"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        />

    <TextView
        android:id="@+id/showtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/showimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        tools:text="Lorem ipsum doloret sempri cum alpha bius adolphus datus beptin dagobus thi bluat venici kaiser tum bei potus gambus"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textFontWeight="400"
        />

    <TextView
        android:id="@+id/textreviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/showtext"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="29dp"
        android:layout_marginStart="24dp"
        android:text="@string/reviews"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textFontWeight="700"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textreviews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="134dp"
        android:text="@string/no_reviews_yet"
        android:textSize="17sp"
        android:textFontWeight="400"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reviewbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/write_a_review"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:backgroundTint="#52368C"
        android:background="@drawable/login_button"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/white"
        android:textFontWeight="700"
        />







</androidx.constraintlayout.widget.ConstraintLayout>