<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Prison Break">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ActivityShowDetails">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/showimg"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="29dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/prison_break"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                />

            <TextView
                android:id="@+id/showtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textFontWeight="400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showimg"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                />

            <TextView
                android:id="@+id/textreviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:layout_marginStart="24dp"
                android:text="@string/reviews"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textFontWeight="700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showtext"
                />

            <TextView
                android:id="@+id/noReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="134dp"
                android:layout_marginEnd="134dp"
                android:text="@string/no_reviews_yet"
                android:textSize="17sp"
                android:textFontWeight="400"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textreviews"
                />

            <TextView
                android:id="@+id/averageratingtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:text="@string/reviews_average"
                android:fontFamily="@font/roboto_regular"
                android:textFontWeight="400"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textreviews"
                />

            <RatingBar
                android:id="@+id/averageratingbar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="26dp"
                android:backgroundTint="#9586AE"
                android:progressTint="#52368C"
                android:isIndicator="true"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/averageratingtext"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewsrecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="27dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/averageratingbar"
                tools:listitem="@layout/view_review_item"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="126dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviewsrecycler"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reviewbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#52368C"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/write_a_review"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="17sp"
            app:backgroundTint="@null"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>